added script to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dynamics</title>
+    <script src="main.js"></script>
 </head>
 <body>
     <h1>started!</h1>
